src/components/nav/nav.scss
.nav
{
  position: relative;
  width:    300px;
}
.nav-container
{
  background: $primary-color-dark;
  display:    block;
  position:   absolute;
    bottom:   0;
    left:     0;
    right:    0;
    top:      0;
}
.nav-content
{
  display:           flex;
    align-items:     stretch;
    flex-direction:  column;
    justify-content: space-between;
  height:            100%;
}
.nav-items
{
  height:   100%;
  overflow: auto;
}
.nav-add-button
{
  @extend %button-primary;

  width: 100%;
}
.nav-add-input
{
  @extend %textfield;

  background: rgba(#000, 0.7);
  border:     none;
  color:      #FFFFFF;
  display:    block;
  width:      100%;
}

